tests/baselines/reference/parserAccessors7(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserAccessors7.ts(1,15): error TS1054: A 'get' accessor cannot have parameters.
parserAccessors7.ts(1,15): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserAccessors7.ts (2 errors) ====
    var v = { get foo(v: number) { } };
                  ~~~
!!! error TS1054: A 'get' accessor cannot have parameters.
                  ~~~
!!! error TS2378: A 'get' accessor must return a value.